--- a/mono/latest/Dockerfile
+++ b/mono/latest/Dockerfile
@@ -8,7 +8,7 @@ RUN         apt install -y fontconfig dirmngr
 RUN         apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
 RUN         sh -c 'echo "deb https://download.mono-project.com/repo/debian stable-buster main" > /etc/apt/sources.list.d/mono-official-stable.list'
 RUN         apt update
-RUN         apt install -y mono-complete
+RUN         apt install -y mono-complete tmux expect
 
 # Only install the needed steamcmd packages on the AMD64 build
 RUN         if [ "$(uname -m)" = "x86_64" ]; then \
